starting to implement frontened

--- a/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
@@ -16,5 +16,5 @@
             </tbody>
         </table>
     {% endif %}
-    <p>create a <a href="{{ path("new_application") }}">new application</a></p>
+    <p>create a <a href="{{ path_for("new_application") }}">new application</a></p>
 {% endblock application_content %}
