--- a/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
@@ -51,5 +51,7 @@
     $.backstretch("assets/img/bg01.jpg", {speed: 500});
 </script>
 
+<!-- modiefied tempalte from http://blacktie.co/demo/feedo/ !-->
+
 </body>
 </html>
