working on login, making databases great again

--- a/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
@@ -15,6 +15,8 @@
 
     <!-- Custom styles for this template -->
     <link href="/assets/css/style.css" rel="stylesheet">
+    <!-- Custom styles for this project -->
+    <link href="/css/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
