--- a/Famoser.SyncApi.Webpage/app/templates/login/register.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/login/register.html.twig
@@ -1,9 +1,19 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}register{% endblock %}
 
 {% block content %}
-    <h3>SyncApi</h3>
-    <p>This is the webinterface for the <a href="http://github.com/famoser/SyncApi">SyncApi</a>.
-        <a href="{{ path_for("login") }}">Login</a> and manage your applications.</p>
+    <h3>register form</h3>
+    <form action="{{ path_for("register") }}" method="post">
+        <div class="form-group">
+            <input placeholder="username" name="username" class="form-control"/>
+            <input placeholder="email" name="email" type="email" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <input placeholder="password" name="password" type="password" class="form-control"/>
+            <input placeholder="confirm password" name="password2" type="password" class="form-control"/>
+        </div>
+        <button class="btn btn-primary" type="submit">send</button>
+    </form>
+    <p>you want to <a href="{{ path_for("login") }}">login</a>?</p>
 {% endblock %}
