implementing login controller

--- a/Famoser.SyncApi.Webpage/app/templates/login/login.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/login/login.html.twig
@@ -12,4 +12,5 @@
         <button class="btn btn-primary" type="submit">send</button>
     </form>
     <p>not yet <a href="{{ path_for("register") }}">registered</a>?</p>
+    <p><a href="{{ path_for("forgot") }}">forgot</a> your password?</p>
 {% endblock %}
