--- a/Famoser.SyncApi.Webpage/app/templates/login/recover.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/login/recover.html.twig
@@ -16,6 +16,6 @@
         </div>
         <button class="btn btn-primary" type="submit">send</button>
     </form>
-    <p>create an authorization code <a href="{{ path_for("forgot") }}">here</a></p>
-    <p>have your got your memory back and want to <a href="{{ path_for("login") }}">login</a>?</p>
+    <p>create an authorization code <a href="{{ path_for("forgot") }}">here</a><br/>
+        have your got your memory back and want to <a href="{{ path_for("login") }}">login</a>?</p>
 {% endblock %}
