--- a/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
@@ -1,20 +1,24 @@
-{% extends "application_layout.html.twig" %}
+{% extends "layout.html.twig" %}
 
 {% block title %}your applications{% endblock title %}
 
-{% block application_content %}
-    {% if (application | length == 0) %}
+{% block content %}
+    {% if applications | length == 0 %}
         <p>You do not have any applications yet</p>
-    {% elseif %}
-        <table class="table">
-            <tbody>
-            {% for app in applications %}
-                <tr>
-                    <td><a href="{{ path_for('application_show', {'id': app.id}) }}">{{ app.name }}</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    {% else %}
+        <h3>a list of your applications</h3>
+        {% for app in applications %}
+            <div class="post">
+                <h4>
+                    {{ app.name }}
+                </h4>
+                <small>{{ app.description }}</small>
+                <p class="pull-right">
+                    <a class="glyphicon glyphicon-edit" href="{{ path_for('application_edit', {'id': app.id}) }}"><span></span></a>
+                    <a class="glyphicon glyphicon-stats" href="{{ path_for('application_show', {'id': app.id}) }}"><span></span></a>
+                </p>
+            </div>
+        {% endfor %}
     {% endif %}
-    <p>create a <a href="{{ path_for("new_application") }}">new application</a></p>
-{% endblock application_content %}
+    <p>create a <a href="{{ path_for("application_new") }}">new application</a></p>
+{% endblock content %}
