--- a/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/layout.html.twig
@@ -10,13 +10,7 @@
 
     <title>SyncApi</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="/assets/css/style.css" rel="stylesheet">
-    <!-- Custom styles for this project -->
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/dist/css/styles.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -46,17 +40,12 @@
     </div>
 </section>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
-
-<!--BACKSTRETCH-->
-<!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
-<script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
+<script src="/dist/js/scripts.min.js"></script>
 <script>
     $.backstretch("assets/img/bg01.jpg", {speed: 500});
 </script>
 
-<!-- modiefied tempalte from http://blacktie.co/demo/feedo/ !-->
+<!-- modified template from http://blacktie.co/demo/feedo/ !-->
 
 </body>
 </html>
