--- a/Famoser.SyncApi.Webpage/src/public/assets/css/style.css
+++ b/Famoser.SyncApi.Webpage/src/public/assets/css/style.css
@@ -1,38 +1,47 @@
 /*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: Feedo - Free Bootstrap Theme
- * Version: 1.0
- * URL: http://blacktie.co/
- */
- 
-/* FONTS */
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+* Author: Carlos Alvarez
+* URL: http://alvarez.is
+*
+* Project Name: FeedStrap - News Aggregator Bootstrap 3 Theme
+* Version: 1.0
+* URL: http://alvarez.is/demo/feedstrap/
+*/
 
 /* OVERALL ASPECT */
 
 body {
     background-color: #f2f2f2;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Calibri', sans-serif;
     font-weight: 400;
     font-size: 14px;
     color: #555;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
-    
+
+}
+
+.starter {
+    padding-top: 20px;
+}
+
+.data:hover {
+    background: white;
+    -moz-box-shadow: 3px 3px rgba(45,45,45,0.6);
+    -webkit-box-shadow: 3px 3px rgba(45,45,45,0.6);
+    box-shadow: 3px 3px rgba(45,45,45,0.6);
+    cursor: pointer;
 }
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Calibri', sans-serif;
     font-weight: 700;
     color: #333;
 }
 
 h1 {
-	font-size: 30px;
+    font-size: 40px;
 }
 
 
@@ -40,6 +49,7 @@ h1 {
 p {
     line-height: 28px;
     margin-bottom: 25px;
+    margin-top: 15px;
 }
 
 .centered {
@@ -47,7 +57,7 @@ p {
 }
 
 .goleft {
-	text-align: left;
+    text-align: left;
 }
 
 /* Links */
@@ -77,7 +87,7 @@ a:after {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
- hr {
+hr {
     display: block;
     height: 1px;
     border: 0;
@@ -87,55 +97,53 @@ a:after {
 }
 
 .mb10 {
-	margin-bottom: 10px;
-	margin-top: 10px;
+    margin-bottom: 30px;
+    margin-top: 80px;
 }
 
 .centered {
-	text-align: center;
+    text-align: center;
 }
-
-/* CONFIGURATION FOR Feedo */
 
 .site {
-	background: white;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	box-shadow: 5px 5px 5px #2f2f2f;
+    background: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: 5px 5px 5px #2f2f2f;
 }
 .site-title {
-	background: #7f7ea8;
-	margin-left: -15px;
-	margin-right: -15px;
-	padding: 20px;
+    background: #7f7ea8;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding: 20px;
 }
 
 .site-title h2 {
-	font-weight: 400;
-	color: white;
-	text-align: center;
+    font-weight: 400;
+    color: white;
+    text-align: center;
 }
 
 .site-footer {
-	margin-left: -15px;
-	margin-right: -15px;
-	text-align: center;
+    margin-left: -15px;
+    margin-right: -15px;
+    text-align: center;
 }
 
 .post {
-	display: block;
-	padding-top:15px;
-	padding-bottom: 15px;
-	margin-top: 15px;
-	margin-bottom: 15px;
-	border-bottom: 1px solid #ddd;
+    display: block;
+    padding-top:15px;
+    padding-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ddd;
 }
 
 .post .pull-right {
-	margin-top: -15px;
+    margin-top: -15px;
 }
 
 .post .glyphicon {
-	font-size: 24px;
-	color: #7f7ea8
+    font-size: 24px;
+    color: #7f7ea8
 }
