making changes as proposed by codeclimate

--- a/Famoser.SyncApi.Webpage/app/templates/application/show.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/application/show.html.twig
@@ -8,28 +8,28 @@
     <div class="post">
         <h4>total users</h4>
         <p class="lead">
-            {{ stats.users_count|default('0') }}
+            {{ stats.usersCount|default('0') }}
         </p>
     </div>
 
     <div class="post">
         <h4>total devices</h4>
         <p class="lead">
-            {{ stats.devices_count|default('0') }}
+            {{ stats.devicesCount|default('0') }}
         </p>
     </div>
 
     <div class="post">
         <h4>total collections</h4>
         <p class="lead">
-            {{ stats.collections_count|default('0') }}
+            {{ stats.collectionsCount|default('0') }}
         </p>
     </div>
 
     <div class="post">
         <h4>total entities</h4>
         <p class="lead">
-            {{ stats.entities_count|default('0') }}
+            {{ stats.entitiesCount|default('0') }}
         </p>
     </div>
 
