--- a/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/application/index.html.twig
@@ -14,11 +14,16 @@
                 </h4>
                 <small>{{ app.description }}</small>
                 <p class="pull-right">
-                    <a class="glyphicon glyphicon-edit" href="{{ path_for('application_edit', {'id': app.id}) }}"><span></span></a>
-                    <a class="glyphicon glyphicon-stats" href="{{ path_for('application_show', {'id': app.id}) }}"><span></span></a>
+                    <a class="glyphicon glyphicon-edit" href="{{ path_for('application_edit', {'id': app.id}) }}">
+                        <span></span>
+                    </a>
+                    <a class="glyphicon glyphicon-stats" href="{{ path_for('application_show', {'id': app.id}) }}">
+                        <span></span>
+                    </a>
                 </p>
             </div>
         {% endfor %}
     {% endif %}
+    <p>show api configuration json <a href="{{ path_for("api_info") }}">here</a></p>
     <p>create a <a href="{{ path_for("application_new") }}">new application</a></p>
 {% endblock content %}
