adding proper 404 templates & handlers, testing pulic pages

--- a/Famoser.SyncApi.Webpage/app/templates/public/not_found.html.twig
+++ b/Famoser.SyncApi.Webpage/app/templates/public/not_found.html.twig
@@ -3,6 +3,6 @@
 {% block title %}Server Error{% endblock %}
 
 {% block content %}
-    <h3>a server error occurred</h3>
+    <h3>we could not find what you are looking for :/</h3>
     <p><a href="{{ path_for("index") }}">go back to the start page</a></p>
 {% endblock %}
